--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-"<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Hello World</title>
   </head>
   <body>
-    <h1>Halo Dunia 🌍</h1>
-    <p>Website pertama saya di GitHub Pages!</p>
+    <h1>Hello World!</h1>
+    <p>Website ini sudah diupdate 🚀</p>
   </body>
 </html>
